@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:07:10Z",
+  "timestamp" : "2022-05-11T00:30:15Z",
   "count_outdated" : 324,
   "uniques_outdated" : 62,
-  "count" : 355,
-  "uniques" : 71,
+  "count" : 356,
+  "uniques" : 72,
   "views" : [
     {
       "timestamp": "2022-04-27T00:00:00Z",
@@ -56,10 +56,10 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
