@@ -1,6 +1,6 @@
 {
-  "count": 31,
-  "uniques": 4,
+  "count": 32,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-04-27T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
